# sqlalchemy-lsp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs  pyproject.toml
.github/workflows/: qa.yml  release.yml
editors/helix/: languages.toml
editors/neovim/: sqlalchemy_lsp.lua
editors/vscode/: package.json  tsconfig.json
editors/zed/: Cargo.toml  LICENSE  extension.toml
pkg/aur/: .SRCINFO  PKGBUILD
scripts/: install-zed-extension.sh  package-zed-extension.sh
specs/: 01-overview.md  constitution.md  glossary.md  index.md  roadmap.md
specs/decisions/: ADR-000-template.md  ADR-001-adopt-babel-lsp-architecture.md  ADR-002-tower-lsp-server-fork.md  ADR-003-comprehensive-lints-defaults.md  ADR-004-exclude-rawsql-and-drift.md  ADR-005-stdio-only-transport.md  ADR-006-debounce-and-generation-counter.md  ADR-007-companion-to-python-lsp.md  ADR-008-default-off-missing-column-comment.md
specs/features/: F00-template.md  F01-orm-correctness-diagnostics.md  F02-best-practice-lints.md  F03-completions.md  F04-hover.md  F05-go-to-definition.md  F06-find-references.md  F07-rename.md  F08-symbols.md  F09-signature-help.md  F10-inlay-hints.md  F11-code-actions.md  F12-schema-visualization.md  F13-alembic-support.md  F14-cli-linter.md  F15-editor-integration.md  F16-release-ci.md
specs/foundations/: E01-architecture.md  E02-folder-structure.md  E03-tech-stack.md  E07-data-model.md  E15-app-config.md  E16-conventions.md  E17-testing.md  E29-e2e-testing.md  E30-extraction-and-indexing.md
src/: config.rs  lib.rs  main.rs  pipeline.rs  server.rs  state.rs
src/alembic/: extractor.rs  mod.rs
src/cli/: check.rs  format.rs  mod.rs  schema.rs  stats.rs
src/features/: alembic_diag.rs  code_action.rs  completion.rs  definition.rs  diagnostics.rs  f01.rs  f02.rs  (+8 more)
tests/: editor_config.rs  fixture_parses.rs  release_assets.rs
(+90 files in other folders)
