[package]
name = "sqlalchemy-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Language server for SQLAlchemy ORM intelligence"
license = "MIT"
repository = "https://github.com/alex-oleshkevich/sqlalchemy-lsp"
homepage = "https://github.com/alex-oleshkevich/sqlalchemy-lsp"
keywords = ["lsp", "sqlalchemy", "python", "orm"]
categories = ["development-tools"]
authors = ["Alex Oleshkevich <techsupport@investerra.ch>"]

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
ropey = "1"
dashmap = "6"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
notify = "6"
globset = "0.4"
owo-colors = "4.3.0"

[dev-dependencies]
insta = "1"
tempfile = "3"
