[project]
name = "sqlalchemy-lsp"
dynamic = ["version"]
description = "Language server for SQLAlchemy ORM intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["sqlalchemy", "lsp", "language-server", "orm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[tool.maturin]
binaries = ["sqlalchemy-lsp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/e2e"]
log_cli = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-lsp>=1.0.0",
    "lsprotocol>=2023.0.0",
]
